# homelab-infra

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  V2Club.yaml  V2Club_daemon.yaml  V2Club_general.yaml  V2fly.yaml  clash_start_post.sh  clash_stop_post.sh  config_source.yaml  generate_config.py  get_clash_cfg.py  my_rules.yaml  pyproject.toml  quantumult_x.conf  requirements.txt  setup_fake_ip_gateway_iptables.sh  setup_fake_ip_iptables.sh  setup_gateway_iptables.sh  setup_iptables.sh  setup_tproxy_iptables.sh  setup_tun_iptables.sh  update_qcloud_dns.py
.agents/skills/secret-handling/: SKILL.md
.agents/skills/secret-handling/references/: artifact-encryption.md  rotation.md
.claude/skills/secret-handling/: SKILL.md
.github/: artifacts-release-readme.md
.github/workflows/: artifacts-release-nightly.yaml  build_openwrt.yaml  openwrt-snapshot-daily.yaml  openwrt-stable-monthly.yaml  verify-master-password.yaml
common/: .gitignore  README.md  __init__.py  pyproject.toml  secret_decoder.py  secrets.py  secrets.yaml
common/src/common/: __init__.py  _cli.py  _manager.py  _rotate_password.py  secrets.py  secrets.yaml
conf-cookbook/nginx/sites-available/: hostname.conf
conf-cookbook/shadowsocks-rust/: config.json
conf-cookbook/v2ray/: config.json
conf-gen/: .gitignore  README.md  config_source.yaml  generate.py  generate_config.py  pyproject.toml  source.yaml
conf-gen/generator/: __init__.py  _base_generator.py  clash_generator.py  quantumult_generator.py  sing_box_generator.py
conf-gen/proxy/: __init__.py  _base_proxy.py  parser.py  shadowsocks_proxy.py  socks_proxy.py  trojan_proxy.py  v2ray_proxy.py
conf-gen/proxy_group/: __init__.py  _base_proxy_group.py  fallback_proxy_group.py  parser.py  selective_proxy_group.py
conf-gen/rewrite/: __init__.py  _base_rewrite.py  parser.py  quantumult_rewrite.py
conf-gen/rule/: __init__.py  _base_ir.py  ir.py  parser.py  utils.py
conf-gen/src/conf_gen/: __init__.py  _cli.py
conf-gen/src/conf_gen/generator/: __init__.py  _base_generator.py  clash_generator.py  quantumult_generator.py  sing_box_generator.py
conf-gen/src/conf_gen/proxy/: __init__.py  _base_proxy.py  parser.py  shadowsocks_proxy.py  socks_proxy.py  trojan_proxy.py  v2ray_proxy.py
conf-gen/src/conf_gen/proxy_group/: __init__.py  _base_proxy_group.py  fallback_proxy_group.py  parser.py  selective_proxy_group.py
conf-gen/src/conf_gen/rewrite/: __init__.py  _base_rewrite.py  parser.py  quantumult_rewrite.py
conf-gen/src/conf_gen/rule/: __init__.py  _base_ir.py  ir.py  parser.py  utils.py
conf-gen/tests/: conftest.py  test_generated_sing_box_artifacts.py  test_sing_box_route_probes.py  test_source_derived_sing_box.py
conf-gen/tests/_support/: __init__.py  sing_box.py
docker/: Dockerfile  docker-compose.yml
nginx/sites-available/: bwh-jp-01.rundong.me
openwrt/: setup_clash_tun.sh
openwrt-builder/: README.md  build.sh  packages-22.03.0.txt  packages.txt
openwrt-builder/file/etc/scripts/: flush_clash_tun.sh  setup_clash_tproxy.sh  setup_clash_tun.sh
openwrt-builder/files/etc/: flush_clash_tun.user.skip  hosts  setup_clash_tun.user.skip
openwrt-builder/files/etc/apk/repositories.d/: distfeeds.list
openwrt-builder/files/etc/crontabs/: root
openwrt-builder/files/etc/dropbear/: authorized_keys
openwrt-builder/files/etc/init.d/: clash  clash_utun.skip  naiveproxy  sing-box
openwrt-builder/files/etc/nftables.d/: 99-clash-tproxy.nft  99-clash-tproxy.nft.skip  99-sing-box.nft
openwrt-builder/files/etc/opkg/: distfeeds.conf
openwrt-builder/files/etc/uci-defaults/: 99-dhcp.sh  99-dropbear.sh  99-firewall.sh  99-install-common.sh  99-install-tencent-cloud.sh  99-network.sh  99-python-requirements.sh.skip  99-sqm.sh  99-sqm.sh.skip  99-system.sh  99-uu-netease.sh  99-uu-netease.sh.skip
openwrt-builder/files/root/.config/naiveproxy/: config.json.skip
openwrt/init.d/: clash  clash_tproxy  clash_utun  vlmcsd
openwrt/scripts/: flush_clash_tproxy.sh  flush_clash_tun.sh  setup_clash_tproxy.sh  setup_clash_tun.sh
shadowsocks-rust/: config.json  ssserver.service
util-cookbook/: fetch_config.sh
util-cookbook/asus-merlin/: led_schedule.cron  leds_off.sh  leds_on.sh  turn_off_leds.sh
util-cookbook/tencent-cloud/: README.md  pyproject.toml  register_dns.py
util-cookbook/tencent-cloud/src/tencent_cloud/: __init__.py  dnspod.py  public_ip.py  register_dns.py
v2ray/: config.json
