[project]
name = "homelab-infra"
version = "0.0.0"
description = "Homelab infrastructure monorepo"
requires-python = ">=3.12"
dependencies = [
    "common",
    "conf-gen",
    "tencent-cloud",
]

[tool.uv.workspace]
members = ["common", "conf-gen", "util-cookbook/tencent-cloud"]

[tool.uv.sources]
common = { workspace = true }
conf-gen = { workspace = true }
tencent-cloud = { workspace = true }
