[project]
name = "homelab-infra"
version = "0.0.0"
description = "Homelab infrastructure monorepo"
requires-python = ">=3.12"
dependencies = [
    "common",
    "conf-gen",
    "tencent-cloud",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "black>=24.0",
    "isort>=5.13",
    "types-PyYAML",
    "types-requests",
    "types-pytz",
    "types-netifaces",
]

[tool.uv.workspace]
members = ["common", "conf-gen", "util-cookbook/tencent-cloud"]

[tool.uv.sources]
common = { workspace = true }
conf-gen = { workspace = true }
tencent-cloud = { workspace = true }
