[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "common"
version = "0.1.0"
description = "Secrets management for homelab infrastructure"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0.0",
    "PyYAML>=6.0"
]

[project.scripts]
common-secret-decoder = "common._cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
common = ["../secrets.yaml"]
