[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "common"
version = "0.1.0"
description = "Secrets management for homelab infrastructure"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=41.0.0",
    "PyYAML>=6.0"
]

[project.scripts]
common-secret-decoder = "common._cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
common = ["secrets.yaml", "py.typed"]

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
no_implicit_optional = true
