[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tencent-cloud"
version = "0.1.0"
description = "Tencent Cloud utilities (DNSPod DDNS updater)"
requires-python = ">=3.12"
dependencies = [
    "common",
    "ifaddr>=0.2.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
# netifaces is a C extension that has no OpenWRT apk package and no musl
# wheels on PyPI. Keep it optional so on-device `pip install -e` succeeds;
# install with `.[netifaces]` only if you need --get-ipv*-method=netifaces.
netifaces = ["netifaces>=0.11.0"]

[project.scripts]
register-dns = "tencent_cloud.register_dns:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tencent_cloud = ["py.typed"]

[tool.uv.sources]
common = { workspace = true }

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
no_implicit_optional = true
